--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ svg:hover {
       <p><strong>De:</strong> Edu</p>
       <p>Holi mi princesa, qro decirte q qro q no pienses que pues no tengo interes, no qro hablar contigo y eso solo es q pues como te dije te pedi q borraras a ese y pues no lo hiciste y preferiste nomas justificar xd y eso pues si me duele pero bueno ya q puedo hacer</p>
       <p>Te amo mucho y si quiero todo contigo y me siento afortunado en tenerte se que piensas q por tu fisico y mira eres linda y hermosa, pero vi q cuando te sientes feliz y comoda tu voz cambia eres mas linda y tierna y me encanta demasiado como eres cuando estas asi me pone muy contento</p>
-      <p>Nunca ni jamas te cambiaria, te dejaria de amar, me dejarias de interesar pq contigo quiero todo de verdad pq valoro q me ames, valoro que me expliques, valoro todo lo que haces por mi y me gusta tambien ;3</p>
+      <p>Nunca ni jamas te cambiaria, te dejaria de amar, me dejarias de interesar pq contigo quiero todo de verdad pq valoro q me ames, valoro que me expliques, valoro todo lo que haces por mi y me gusta tambien me siento tan afortunadote de tenerte y quiero tenerte x siempre y q los dos seamos eternos y tengamos muchos hijitos jejjadsj ;3</p>
       <p>Espero de verdad no te aburras de mi porque yo si quiero todo contigo y qro q seas mi novia y esposa y todoooo por siempre y espero quieras lo mismo de mi ;b</p>
       <p>De verdad no te miento cuando digo que quiero todo contigo y has sido la unica por la cual me he esforzado, yo de verdad qro q seas tutututuu de verdad de verdad, qro hacer todo lo posible por que seas feliz, me da miedito que te aburra de esperarme porque pues son 5 dias y los 5 voy a las 2 y salgo a las 8 por lo cual creo los unicos dias seran los lunes y viernes y jueves creo q sales mas o menos temprano tambien osea hablamos o jugamos nose y me voy a la escuela pero si me da miedo pq siento q te aburriras y pues hablaras con mas onvres o nose amorsito pero bueno te amooooo :3</p>
       <p class="romantico">Isidora</p>
@@ -240,3 +240,4 @@ for(let i=0; i<25; i++){ // más corazones
 </script>
 </body>
 </html>
+
